# pupalink_bot

./: .gitignore  config_example.yaml  pyproject.toml
pupabot/: __init__.py  __main__.py  messages.py
pupabot/helpers/: helpers.py
pupabot/models/: search.py
pupabot/service/: __init__.py  pupa.py  search.py
